Fix weird spacing on company profiles

--- a/public/scss/modules/_company.scss
+++ b/public/scss/modules/_company.scss
@@ -1,29 +1,6 @@
 @import '../_bootstrap-variables.scss';
 @import '../_variables.scss';
 
-.company-list {
-
-    .company-list-item {
-        margin-top: 4em;
-        margin-bottom: 4em;
-    }
-
-    img.company-logo {
-        margin: 2em auto;
-    }
-}
-
-.job-list {
-    .job-list-item {
-        margin-top: 4em;
-        margin-bottom: 4em;
-    }
-
-    img.company-logo {
-        margin: 2em auto;
-    }
-}
-
 .company-grid {
     .company-grid-item {
         border: 1px solid $card-border-color;
